# Parallelogram_arm_robot

./: CMakeLists.txt  CMakeLists.txt~  README.md  arm.world  arm_plugin.cc  arm_plugin.cc~  vel.cc~  vel12.cc
Kinematics/: 2D-kinematics.py  ReadMe.txt
Release/: CMakeCache.txt
arm_plugin/: JointController.hh~  arm.world~  arm_plugin.cc~  velDD1.cc  velDD2.cc
arm_plugin/Release/: Makefile  cmake_install.cmake
